--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -10,7 +10,7 @@
     <th:block th:each="msg : ${messages}">
         <h1 th:text="${msg}"></h1>
     </th:block>
-    <a href="/cars?locale=en">Cars</a> <a href="/cars?locale=ru">Машины</a> <a href="/users">Пользователи</a>
+    <a href="/cars?locale=en">Cars</a> <a href="/cars?locale=ru">Машины</a> <a href="/users"><h3>Пользователи</h3> </a>
 </div>
 </body>
 </html>
